--- a/.elk.env
+++ b/.elk.env
@@ -1,4 +1,8 @@
-#
-
+# infra
 export ELASTIC_NAME=abidindenyo
 export KIBANA_NAME=kibos
+
+# ingest
+export ELASTIC_IP=localhost
+export INDEX_NAME=call-records
+export PIPELINE_NAME=${INDEX_NAME}-pipeline
