--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -8,7 +8,7 @@ input {
 filter {
     csv {
         separator => ";"
-        columns => ["birincil_numara","tip","tarih","sure","imei","kaynak_ip","hedef_ip","erisilen_sayfa","gonderme_miktari","indirme_miktari","baz"]
+        columns => [“birincil_numara”,”tip”,”diger_numara”,”tarih”,”sure”,”diger_kisi”,”diger_adres”,”diger_dogum”,”diger_il”,”diger_ebeveyn”,”imei”,”baz_istasyonu”]
     }
     mutate { strip => ["tarih"] }
     date {
