--- a/pipelines/gprs_pipeline.conf
+++ b/pipelines/gprs_pipeline.conf
@@ -8,7 +8,7 @@ input {
 filter {
     csv {
         separator => ";"
-        columns => ["birincil_numara","tip","tarih","sure","imei","kaynak_ip","hedef_ip","erisilen_sayfa","gonderme_miktari","indirme_miktari","baz"]
+        columns => ["sira_no","birincil_numara","tip","tarih","sure","imei","kaynak_ip","hedef_ip","erisilen_sayfa","gonderme_miktari","indirme_miktari","baz_istasyon"]
     }
     mutate { strip => ["tarih"] }
     date {
