mappings updated, header fields updated

--- a/mappings/call_mapping.json
+++ b/mappings/call_mapping.json
@@ -2,60 +2,26 @@
     "settings" : {
         "number_of_shards" : 1
     },
-
-    #;NUMARA;DURUM;AD;SOYAD;ADRES;DOĞUM TARİHİ;DOĞUM YERİ;İLÇE;İL;TC KİMLİK NO;ANNE ADI;BABA ADI;ABONE SORGU ARALIĞI;OPERATÖR;;;;;
-    
     "mappings" : {
         "properties" : {
-            "@timestamp": {
-                "type": "date"
-            },
-            "baz_istasyonu": {
-                "type": "text"
-            },
-            "gonderme_miktari": {
-                "type": "long"
-            },
-            "hedef_numara": {
-                "type": "keyword"
-            },
-            "hedef_numara_adres": {
-                "type": "text"
-            },
-            "hedef_numara_dogum": {
-                "type": "keyword"
-            },
-            "hedef_numara_ebevyn": {
-                "type": "keyword"
-            },
-            "hedef_numara_il": {
-                "type": "keyword"
-            },
-            "hedef_numara_isim": {
-                "type": "text"
-            },
-            "imei": {
-                "type": "long"
-            },
-            "indirme_miktari": {
-                "type": "long"
-            },
-            "kaynak_ip": {
-                "type": "ip"
-            },
-            "numara": {
-                "type": "long"
-            },
-            "sure": {
-                "type": "keyword"
-            },
-            "tarih": {
-                "type": "date",
-                "format": "dd.MM.yyyy HH:mm:ss"
-            },
-            "tip": {
-                "type": "keyword"
-            }
+            "@timestamp": {"type": "date"},
+            "numara": { "type": "keyword" },
+            "tip": {"type": "keyword"},
+            "hedef_numara": {"type": "keyword"},
+            "tarih": {"type": "date", "format": "dd.MM.yyyy HH:mm:ss"},
+            "sure": {"type": "long"},
+            "hedef_numara_isim": {"type": "keyword"},
+            "hedef_numara_adres": {"type": "text"},
+            "hedef_numara_dogum": {"type": "text"},
+            "hedef_numara_il": {"type": "text"},
+            "hedef_numara_ebevyn": {"type": "text"},
+            "imei": {"type": "keyword"},
+            "kaynak_ip": {"type": "ip"},
+            "hedef_ip": {"type": "ip"},
+            "erisilen_sayfa": {"type": "text"},
+            "gonderme_miktari": {"type": "long"},
+            "indirme_miktari": {"type": "long"},            
+            "baz_istasyonu": {"type": "text"}
         }
     }
 }
