--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -8,7 +8,7 @@ input {
 filter {
     csv {
         separator => ";"
-        columns => [“birincil_numara”,”tip”,”diger_numara”,”tarih”,”sure”,”diger_kisi”,”diger_adres”,”diger_dogum”,”diger_il”,”diger_ebeveyn”,”imei”,”baz_istasyonu”]
+        columns => ["sira_no","numara","tip","hedef_numara","tarih","sure","hedef_numara_isim","hedef_numara_adres","hedef_numara_dogum","hedef_numara_il","hedef_numara_ebevyn","imei","baz_istasyonu"]
     }
     mutate { strip => ["tarih"] }
     date {
