--- a/pipelines/internet_pipeline.conf
+++ b/pipelines/internet_pipeline.conf
@@ -8,7 +8,7 @@ input {
 filter {
     csv {
         separator => ";"
-        columns => ["sira_no","birincil_numara","tip","tarih","sure","imei","kaynak_ip","hedef_ip","erisilen_sayfa","gonderme_miktari","indirme_miktari","baz_istasyon"]
+        columns => ["sira_no","numara","tip","tarih","sure","imei","kaynak_ip","hedef_ip","erisilen_sayfa","gonderme_miktari","indirme_miktari","baz_istasyonu"]
     }
     mutate { strip => ["tarih"] }
     date {
@@ -18,8 +18,8 @@ filter {
     mutate{ remove_field => [ "message", "host" ] }
     mutate { gsub => ["sure"," sn.", ""] }
     translate {
-        field => "birincil_numara"
-        destination => "birincil_kisi"
+        field => "numara"
+        destination => "numara_isim"
         dictionary_path => "/etc/logstash/dictionary_phone.yaml"
     }
     mutate {
