dictionary mapping updated

--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -18,8 +18,8 @@ filter {
     mutate{ remove_field => [ "message", "host" ] }
     mutate { gsub => ["sure"," sn.", ""] }
     translate {
-        field => "birincil_numara"
-        destination => "birincil_kisi"
+        field => "numara"
+        destination => "numara_isim"
         dictionary_path => "/etc/logstash/dictionary_phone.yaml"
     }
     mutate {
