--- a/mappings/call_records_mapping.json
+++ b/mappings/call_records_mapping.json
@@ -9,7 +9,7 @@
             "tip": {"type": "keyword"},
             "hedef_numara": {"type": "keyword"},
             "tarih": {"type": "date", "format": "dd.MM.yyyy HH:mm:ss"},
-            "sure": {"type": "long"},
+            "sure": {"type": "text"},
             "hedef_numara_isim": {"type": "keyword"},
             "hedef_numara_adres": {"type": "text"},
             "hedef_numara_dogum": {"type": "text"},
@@ -20,7 +20,7 @@
             "hedef_ip": {"type": "ip"},
             "erisilen_sayfa": {"type": "text"},
             "gonderme_miktari": {"type": "long"},
-            "indirme_miktari": {"type": "long"},            
+            "indirme_miktari": {"type": "long"},
             "baz_istasyonu": {"type": "text"}
         }
     }
