--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => "/etc/logstash/call.csv"
+        path => "usr/share/logstash/data/call.csv"
         start_position => "beginning"
         sincedb_path => "/dev/null"
     }
@@ -20,7 +20,7 @@ filter {
     translate {
         field => "numara"
         destination => "numara_isim"
-        dictionary_path => "/etc/logstash/dictionary_phone.yaml"
+        dictionary_path => "usr/share/logstash/pipeline/dictionary_phone.yaml"
     }
     mutate {
         convert => {
