--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => "usr/share/logstash/data/call.csv"
+        path => "/data/call.csv"
         start_position => "beginning"
         sincedb_path => "/dev/null"
     }
