Added logstash updates

--- a/.elk.env
+++ b/.elk.env
@@ -1,6 +1,10 @@
 # infra
 export ELASTIC_NAME=abidindenyo
 export KIBANA_NAME=kibos
+export LOGSTASH_NAME=ketenpere
+
+# get by, docker inspect abidindenyo | grep IP
+export ELASTIC_DOCKER_PRIVATE_IP=172.17.0.2
 
 # ingest
 export ELASTIC_IP=localhost
