Added logstash updates

--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -30,7 +30,7 @@ filter {
 }
 output {
     elasticsearch {
-        hosts => "http://localhost:9200"
+        hosts => "http://172.17.0.2:9200"
         index => "call_records"
     }
     stdout {  }
