Bugfix: logstash updates

--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -16,17 +16,17 @@ filter {
         target => "@timestamp"
     }
     mutate{ remove_field => [ "message", "host" ] }
-    mutate { gsub => ["sure"," sn.", ""] }
     translate {
         field => "numara"
         destination => "numara_isim"
-        dictionary_path => "usr/share/logstash/pipeline/dictionary_phone.yaml"
+        dictionary_path => "/data/dictionary_phone.yaml"
     }
     mutate {
         convert => {
           "sure" => "integer"
         }
     }
+    mutate { gsub => ["sure"," sn.", ""] }
 }
 output {
     elasticsearch {
