--- a/pipelines/internet_pipeline.conf
+++ b/pipelines/internet_pipeline.conf
@@ -20,7 +20,7 @@ filter {
     translate {
         field => "numara"
         destination => "numara_isim"
-        dictionary_path => "usr/share/logstash/pipeline/dictionary_phone.yaml"
+        dictionary_path => "/data/dictionary_phone.yaml"
     }
     mutate {
         convert => {
