bugfix: logstash updates

--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => "/data/call.csv"
+        path => "/usr/share/logstash/data/call.csv"
         start_position => "beginning"
         sincedb_path => "/dev/null"
     }
@@ -15,18 +15,18 @@ filter {
         match => [ "tarih", "dd.MM.yyyy HH:mm:ss" ]
         target => "@timestamp"
     }
-    mutate{ remove_field => [ "message", "host" ] }
+    mutate { gsub => ["sure"," sn.", ""] }
     translate {
         field => "numara"
         destination => "numara_isim"
-        dictionary_path => "/data/dictionary_phone.yaml"
+        dictionary_path => "/usr/share/logstash/data/dictionary_phone.yaml"
     }
     mutate {
         convert => {
           "sure" => "integer"
         }
     }
-    mutate { gsub => ["sure"," sn.", ""] }
+    mutate{ remove_field => [ "message", "host" ] }
 }
 output {
     elasticsearch {
