nugfix: timestamp timezone

--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -14,6 +14,7 @@ filter {
     date {
         match => [ "tarih", "dd.MM.yyyy HH:mm:ss" ]
         target => "@timestamp"
+        timezone => "Europe/Istanbul"
     }
     mutate { gsub => ["sure"," sn.", ""] }
     translate {
