bugfix: elastic host ip

--- a/pipelines/internet_pipeline.conf
+++ b/pipelines/internet_pipeline.conf
@@ -27,11 +27,11 @@ filter {
           "sure" => "integer"
         }
     }
-    mutate{ remove_field => [ "message", "host" ] }
+    mutate{ remove_field => [ "message"] }
 }
 output {
     elasticsearch {
-        hosts => "http://localhost:9200"
+        hosts => "http://172.17.0.2:9200"
         index => "call_records"
     }
     stdout {  }
