host field removed

--- a/pipelines/internet_pipeline.conf
+++ b/pipelines/internet_pipeline.conf
@@ -27,7 +27,7 @@ filter {
           "sure" => "integer"
         }
     }
-    mutate{ remove_field => [ "message"] }
+    mutate{ remove_field => [ "message", "host" ] }
 }
 output {
     elasticsearch {
