bugfix: data in pipeline and mappings must be same

--- a/.elk.env
+++ b/.elk.env
@@ -8,5 +8,5 @@ export ELASTIC_DOCKER_PRIVATE_IP=172.17.0.2
 
 # ingest
 export ELASTIC_IP=localhost
-export INDEX_NAME=call-records
+export INDEX_NAME=(cdr-call cdr-internet)
 export PIPELINE_NAME=${INDEX_NAME}-pipeline
