--- a/pipelines/call_pipeline.conf
+++ b/pipelines/call_pipeline.conf
@@ -32,7 +32,7 @@ filter {
 output {
     elasticsearch {
         hosts => "http://172.17.0.2:9200"
-        index => "call_records"
+        index => "cdr-call"
     }
     stdout {  }
 }
