--- a/mapping-cdr-call.json
+++ b/mapping-cdr-call.json
@@ -5,6 +5,7 @@
     "mappings" : {
         "properties" : {
             "@timestamp": {"type": "date"},
+            "sira_no": { "type": "integer" },
             "numara": { "type": "keyword" },
             "tip": {"type": "keyword"},
             "hedef_numara": {"type": "keyword"},
@@ -16,11 +17,6 @@
             "hedef_numara_il": {"type": "text"},
             "hedef_numara_ebevyn": {"type": "text"},
             "imei": {"type": "keyword"},
-            "kaynak_ip": {"type": "ip"},
-            "hedef_ip": {"type": "ip"},
-            "erisilen_sayfa": {"type": "text"},
-            "gonderme_miktari": {"type": "long"},
-            "indirme_miktari": {"type": "long"},
             "baz_istasyonu": {"type": "text"}
         }
     }
